--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,10 @@
   padding-top: 75px;
 }
 
+.character {
+  font-size: 20px;
+}
+
 .bold {
   font-size: 125%;
   font-weight: bold;
@@ -30,5 +34,5 @@
   padding: 10px;
   text-align: center;
   color: rebeccapurple;
-  font-size: 24px;
+  font-size: 26px;
 }
